# proxy_checker

./: .gitignore  README.md  api.py  main.py  pyproject.toml  stress_test.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: checks.py  sessions.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  session.py
backend/app/repositories/: session_repository.py
backend/app/schemas/: check.py  session.py
backend/app/services/: check_service.py  geoip_service.py  password_crypto.py  proxy_service.py
frontend/: .env.example  .gitignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  landing.module.css  layout.tsx  page.tsx
frontend/app/components/: auth-provider.tsx  config-panel.tsx  header.tsx  history.tsx  landing-actions.tsx  live-proxy-editor.tsx  proxy-checker-context.tsx  proxy-input.tsx  results-table.tsx  run-controls.tsx  session-detail.tsx  session-input.tsx  sidebar.tsx  stats-bar.tsx  theme-toggle.tsx  ui-icon.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/lib/: proxy-parser.ts
