[project]
name = "proxy-checker-backend"
version = "0.1.0"
description = "FastAPI backend for proxy checker"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "requests>=2.31",
    "aiohttp>=3.9",
    "httpx>=0.28",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "python-jose[cryptography]>=3.3",
    "psycopg2>=2.9.11",
]
